unpackaged/main/default/objects/srlg_Injury__c/srlg_Injury__c.object-meta.xml
<CustomObject>
    <label>Injury</label>
    <nameField>
        <label>Injury Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Injuries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>