unpackaged/main/default/objects/srlg_Injury__c/fields/Age_at_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Diagnosis__c</fullName>
    <formula>IF(
  ISBLANK(Diagnosis_Date__c) || ISBLANK(Intake__r.Injured_Party_Birthdate__c),
  null,
  FLOOR(
    (Diagnosis_Date__c - Intake__r.Injured_Party_Birthdate__c) / 365.25
  )
)</formula>
    <label>Age at Diagnosis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>