unpackaged/main/default/objects/srlg_Injury__c/fields/Age_at_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Recurrence__c</fullName>
    <formula>IF(
   ISBLANK(Last_Date_of_Recurrence__c),
   null,
   YEAR(Last_Date_of_Recurrence__c) - YEAR(Intake__r.Injured_Party_Birthdate__c)
)</formula>
    <label>Age at Recurrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>