unpackaged/main/default/objects/srlg_Injury__c/fields/Chemotherapy_Details__c.field-meta.xml
<CustomField>
    <fullName>Chemotherapy_Details__c</fullName>
    <label>Chemotherapy Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>