unpackaged/main/default/objects/srlg_Injury__c/fields/Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Date__c</fullName>
    <label>Diagnosis Date</label>
    <type>Date</type>
</CustomField>