unpackaged/main/default/objects/srlg_Injury__c/fields/Kidney_Trans_Prior_To_Dx__c.field-meta.xml
<CustomField>
    <fullName>Kidney_Trans_Prior_To_Dx__c</fullName>
    <label>Kidney Transplant Prior To Dx</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>