unpackaged/main/default/objects/srlg_Injury__c/fields/Last_Date_of_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Recurrence__c</fullName>
    <label>Last Date of Recurrence</label>
    <type>Date</type>
</CustomField>