unpackaged/main/default/objects/srlg_Injury__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>