unpackaged/main/default/objects/srlg_Injury__c/fields/Radiation_Details__c.field-meta.xml
<CustomField>
    <fullName>Radiation_Details__c</fullName>
    <label>Radiation Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>