unpackaged/main/default/objects/srlg_Injury__c/fields/Remission_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Remission_Start_Date__c</fullName>
    <label>Remission Start Date</label>
    <type>Date</type>
</CustomField>