unpackaged/main/default/objects/srlg_Injury__c/fields/Remission_Years__c.field-meta.xml
<CustomField>
    <fullName>Remission_Years__c</fullName>
    <label>Remission Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>