unpackaged/main/default/objects/srlg_Injury__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>