unpackaged/main/default/objects/srlg_Injury__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>All types of Acute Lymphoblastic Leukemia/ Lymphoma</fullName>
            </value>
            <value>
                <fullName>Blastic mantle cell lymphoma</fullName>
            </value>
            <value>
                <fullName>B‐lymphoblastic leukemia</fullName>
            </value>
            <value>
                <fullName>B‐lymphoblastic lymphoma</fullName>
            </value>
            <value>
                <fullName>B‐prolymphocytic leukemia</fullName>
            </value>
            <value>
                <fullName>Plasmacytoma</fullName>
            </value>
            <value>
                <fullName>Burkitt lymphoma</fullName>
            </value>
            <value>
                <fullName>Chronic lymphocytic leukemia</fullName>
            </value>
            <value>
                <fullName>Cutaneous B-cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Diffuse follicle center lymphoma, grade 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Diffuse large B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Diffuse mantle cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Extranodal marginal zone B‐cell lymphoma, MALT type</fullName>
            </value>
            <value>
                <fullName>Follicular lymphoma in situ</fullName>
            </value>
            <value>
                <fullName>Follicular lymphoma, grade 1,2 &amp; 3</fullName>
            </value>
            <value>
                <fullName>Hairy cell leukemia</fullName>
            </value>
            <value>
                <fullName>Hairy cell leukemia variant</fullName>
            </value>
            <value>
                <fullName>Lymphoplasmacytic lymphoma (Waldenstrom)</fullName>
            </value>
            <value>
                <fullName>Mantle cell lymphoma in situ</fullName>
            </value>
            <value>
                <fullName>Nodal marginal zone B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Nodular mantle cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Plasma cell dyscrasia</fullName>
            </value>
            <value>
                <fullName>Primary Central Nervous System Lymphoma</fullName>
            </value>
            <value>
                <fullName>Small lymphocytic lymphoma</fullName>
            </value>
            <value>
                <fullName>Splenic marginal zone B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Splenic diffuse red pulp small B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Adult T‐cell lymphoma/leukemia</fullName>
            </value>
            <value>
                <fullName>Aggressive NK‐cell leukemia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>