unpackaged/main/default/objects/srlg_Injury__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <inlineHelpText>This field has been deprecated. We now use: Sub_Type__c</inlineHelpText>
    <label>DEPRECATED SubType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Blastic mantle cell lymphoma</fullName>
            </value>
            <value>
                <fullName>B‐lymphoblastic leukemia</fullName>
            </value>
            <value>
                <fullName>B‐lymphoblastic lymphoma</fullName>
            </value>
            <value>
                <fullName>B‐prolymphocytic leukemia</fullName>
            </value>
            <value>
                <fullName>Plasmacytoma</fullName>
            </value>
            <value>
                <fullName>Burkitt lymphoma</fullName>
            </value>
            <value>
                <fullName>Cutaneous B-cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Diffuse follicle center lymphoma, grade 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Diffuse large B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Diffuse mantle cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Extranodal marginal zone B‐cell lymphoma, MALT type</fullName>
            </value>
            <value>
                <fullName>Follicular lymphoma in situ</fullName>
            </value>
            <value>
                <fullName>Follicular lymphoma, grade 1,2 &amp; 3</fullName>
            </value>
            <value>
                <fullName>Lymphoplasmacytic lymphoma (Waldenstrom)</fullName>
            </value>
            <value>
                <fullName>Mantle cell lymphoma in situ</fullName>
            </value>
            <value>
                <fullName>Nodal marginal zone B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Nodular mantle cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Plasma cell dyscrasia</fullName>
            </value>
            <value>
                <fullName>Primary Central Nervous System Lymphoma</fullName>
            </value>
            <value>
                <fullName>Small lymphocytic lymphoma</fullName>
            </value>
            <value>
                <fullName>Splenic marginal zone B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Splenic diffuse red pulp small B‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Adult T‐cell lymphoma/leukemia</fullName>
            </value>
            <value>
                <fullName>Aggressive NK‐cell leukemia</fullName>
            </value>
            <value>
                <fullName>Anaplastic large T/null‐cell lymphoma</fullName>
            </value>
            <value>
                <fullName>Angioimmunoblastic T‐cell Lymphoma</fullName>
            </value>
            <value>
                <fullName>Anaplastic Large T‐cell Lymphoma</fullName>
            </value>
            <value>
                <fullName>Cutaneous CD8‐positive aggressive epidermotropic cytotoxic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>