unpackaged/main/default/objects/srlg_Injury__c/fields/Surgery_Details__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Details__c</fullName>
    <label>Surgery Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>