unpackaged/main/default/objects/srlg_Injury__c/fields/Treated_With_Chemotherapy__c.field-meta.xml
<CustomField>
    <fullName>Treated_With_Chemotherapy__c</fullName>
    <label>Treated With Chemotherapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>