unpackaged/main/default/objects/srlg_Injury__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type_Routing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Testicular Cancer</fullName>
            </value>
            <value>
                <fullName>Kidney Cancer</fullName>
            </value>
            <value>
                <fullName>Clear Cell Renal Carcinoma</fullName>
            </value>
            <value>
                <fullName>Liver Cancer</fullName>
            </value>
            <value>
                <fullName>Non-Hodgkins Lymphoma</fullName>
            </value>
            <value>
                <fullName>Thyroid Cancer</fullName>
            </value>
            <value>
                <fullName>Thyroid Disease</fullName>
            </value>
            <value>
                <fullName>Ulcerative Colitis</fullName>
            </value>
            <value>
                <fullName>Chronic lymphocytic leukemia</fullName>
            </value>
            <value>
                <fullName>Hairy cell leukemia</fullName>
            </value>
            <value>
                <fullName>Hairy cell leukemia variant</fullName>
            </value>
            <value>
                <fullName>Any types of Actue Lymphoblastic Leukemia/Lymphoma</fullName>
            </value>
            <value>
                <fullName>None of the Above</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>