unpackaged/main/default/objects/srlg_Injury__c/fields/Years_In_Remission__c.field-meta.xml
<CustomField>
    <fullName>Years_In_Remission__c</fullName>
    <label>Years In Remission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>