unpackaged/main/default/objects/srlg_Injury__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Type_Routing__c</columns>
    <columns>Type__c</columns>
    <columns>SubType__c</columns>
    <columns>Severity__c</columns>
    <columns>Diagnosis_Date__c</columns>
    <columns>State_Of_Diagnosis__c</columns>
    <columns>Intake__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>